fixed bug with the JWT generation